tests/render_snapshots/snapshots/render_snapshots__er_diagram__er_table_picker_all_selected.snap
---
source: tests/render_snapshots/er_diagram.rs
expression: output
---
test_project | test_db | - | no dsn | localhost:5432/test                       
┌ [1] Explorer ────┐[Info] [Cols] [Idx] [FK] [RLS] [Trig] [DDL]                 
│> public.users    │┌ [2] Inspector ───────────────────────────────────────────┐
│  public.posts    ││(select a table)                                          │
│  public.commen╭ ER Diagram ──────────────────────────────────╮               │
│               │  >                                           │               │
│               │  Mode:    Full ER                            │               │
│               │  Targets: all 3 tables                       │               │
│               │  Output:  er_full.dot                        │               │
│               │▸   ✔ public.users                            │               │
│               │    ✔ public.posts                            │               │
│               │    ✔ public.comments                         │───────────────┘
│               │                                              │───────────────┐
│               │                                              │               │
│               │                                              │               │
│               │                                              │               │
│               │                                              │               │
│               │                                              │               │
│               │                                              │               │
│               ╰ 3/3 selected │ Space Select │ ^A All │ Enter ╯               │
│                  ││                                                          │
└──────────────────┘└──────────────────────────────────────────────────────────┘
Enter:Generate  Space:Select  ^A:All  ^N/^P/↑↓:Nav  type:Filter  Esc:Close
