tests/render_snapshots/snapshots/render_snapshots__er_diagram__er_table_picker_multi_select.snap
---
source: tests/render_snapshots/er_diagram.rs
expression: output
---
test_project | test_db | - | no dsn | localhost:5432/test                       
┌ [1] Explorer ────┐[Info] [Cols] [Idx] [FK] [RLS] [Trig] [DDL]                 
│> public.users    │┌ [2] Inspector ───────────────────────────────────────────┐
│  public.posts    ││(select a table)                                          │
│  public.commen╭ ER Diagram ──────────────────────────────────╮               │
│               │  >                                           │               │
│               │  Mode:    Partial ER                         │               │
│               │  Targets: 2 tables                           │               │
│               │  Output:  er_partial_multi_2_89466781.dot    │               │
│               │▸   ✔ public.users                            │               │
│               │    ✔ public.posts                            │               │
│               │      public.comments                         │───────────────┘
│               │                                              │───────────────┐
│               │                                              │               │
│               │                                              │               │
│               │                                              │               │
│               │                                              │               │
│               │                                              │               │
│               │                                              │               │
│               ╰ 2/3 selected │ Space Select │ ^A All │ Enter ╯               │
│                  ││                                                          │
└──────────────────┘└──────────────────────────────────────────────────────────┘
Enter:Generate  Space:Select  ^A:All  type:Filter  ↑↓:Navigate  Esc:Close
